Fixed performance api

--- a/counters.in
+++ b/counters.in
@@ -1,9 +1,9 @@
 PAPI_TOT_CYC
 PAPI_TOT_INS
-# PAPI_FP_OPS
+PAPI_FP_OPS
 PAPI_L1_DCM
 PAPI_L2_DCM
-# PAPI_BR_MSP
+PAPI_BR_MSP
 PAPI_VEC_INS
 # rapl:::PACKAGE_ENERGY:PACKAGE0
 
