--- a/counters.in
+++ b/counters.in
@@ -5,5 +5,7 @@ PAPI_L1_DCM
 PAPI_L2_DCM
 PAPI_BR_MSP
 PAPI_VEC_INS
-# rapl:::PACKAGE_ENERGY:PACKAGE0
-
+PAPI_BR_TKN
+PAPI_BR_MSP
+PAPI_L1_DCH
+PAPI_L1_DCA
