--- a/counters.in
+++ b/counters.in
@@ -1,11 +1,14 @@
 PAPI_TOT_CYC
 PAPI_TOT_INS
-PAPI_FP_OPS
-PAPI_L1_DCM
-PAPI_L2_DCM
-PAPI_BR_MSP
+PAPI_FP_INS
 PAPI_VEC_INS
-PAPI_BR_TKN
-PAPI_BR_MSP
-PAPI_L1_DCH
+PAPI_FML_INS
+PAPI_FAD_INS
+PAPI_L1_DCM
 PAPI_L1_DCA
+PAPI_BR_MSP
+PAPI_BR_INS
+PAPI_L2_DCM
+PAPI_L2_DCH
+PAPI_L2_ICM
+PAPI_L2_ICH
